// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizardStepTwo Component should correctly validate and submit data for sources: step invalid 1`] = `
Object {
  "credentials": true,
  "hosts": true,
  "name": true,
  "port": true,
}
`;

exports[`AddSourceWizardStepTwo Component should correctly validate and submit data for sources: step valid 1`] = `
Object {
  "credentials": false,
  "hosts": false,
  "name": false,
  "port": false,
}
`;

exports[`AddSourceWizardStepTwo Component should display different forms for source types: network 1`] = `
<form
  class="pf-c-form pf-m-horizontal"
  novalidate=""
>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_name)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="name"
        name="name"
        placeholder="Enter a name for the Network source"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_search-addresses)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea   pf-m-resize-vertical"
        id="hostsMultiple"
        name="hostsMultiple"
        placeholder="Enter values separated by commas"
        rows="5"
      />
      <span
        class="help-block"
      >
        IP addresses, IP ranges, DNS host names, and wildcards are valid. Use CIDR or Ansible notation for ranges.
      </span>
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_port)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-4"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="port"
        maxlength="5"
        name="port"
        placeholder="Default port is 22"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_credential)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <span
        class="input-group"
      >
        <div
          class="quipucords-select quipucords-select__not-inline"
        >
          <div
            class="pf-c-select quipucords-select-pf quipucords-select-pf__position-down  "
            data-ouia-component-id="OUIA-Generated-Select-checkbox-2"
            data-ouia-component-type="PF4/Select"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-label="Options menu"
              aria-labelledby=" pf-select-toggle-id-3"
              class="pf-c-select__toggle pf-m-placeholder pf-m-disabled"
              disabled=""
              id="pf-select-toggle-id-3"
              type="button"
            >
              <div
                class="pf-c-select__toggle-wrapper"
              >
                <span
                  class="pf-c-select__toggle-text"
                >
                  t(form-dialog.label_placeholder_add-source_credential_multi, {"context":"add"})
                </span>
              </div>
              <span
                class="pf-c-select__toggle-arrow"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="input-group-btn"
        >
          <button
            aria-disabled="false"
            aria-label="t(form-dialog.label, {\\"context\\":\\"add-credential\\"})"
            class="pf-c-button pf-m-control"
            data-ouia-component-id="OUIA-Generated-Button-control-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            title="t(form-dialog.label, {\\"context\\":\\"add-credential\\"})"
            type="button"
          >
            <span
              class="pf-c-button__icon pf-m-start"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-check quipucords-form__checkbox "
      >
        <input
          aria-invalid="false"
          aria-label="checkbox input"
          class="pf-c-check__input"
          data-ouia-component-id="OUIA-Generated-Checkbox-2"
          data-ouia-component-type="PF4/Checkbox"
          data-ouia-safe="true"
          id="optionParamiko"
          name="optionParamiko"
          type="checkbox"
          value=""
        />
        <label
          class="pf-c-check__label"
          for="optionParamiko"
        >
          Connect using Paramiko instead of Open 
          <abbr
            title="Secure Shell"
          >
            SSH
          </abbr>
        </label>
      </div>
    </div>
  </div>
</form>
`;

exports[`AddSourceWizardStepTwo Component should display different forms for source types: vcenter 1`] = `
<form
  class="pf-c-form pf-m-horizontal"
  novalidate=""
>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_name)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-5"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="name"
        name="name"
        placeholder="Enter a name for the VCenter source"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_IP-or-host-name)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-6"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="hostsSingle"
        name="hostsSingle"
        placeholder="Enter an IP address or hostname (default port is 443)"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_credential)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <span
        class="input-group"
      >
        <div
          class="quipucords-select quipucords-select__not-inline"
        >
          <div
            class="pf-c-select quipucords-select-pf quipucords-select-pf__position-down  "
            data-ouia-component-id="OUIA-Generated-Select-single-1"
            data-ouia-component-type="PF4/Select"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Options menu"
              aria-labelledby=" pf-select-toggle-id-6"
              class="pf-c-select__toggle pf-m-placeholder pf-m-disabled"
              disabled=""
              id="pf-select-toggle-id-6"
              type="button"
            >
              <div
                class="pf-c-select__toggle-wrapper"
              >
                <span
                  class="pf-c-select__toggle-text"
                >
                  t(form-dialog.label_placeholder_add-source_credential, {"context":"add"})
                </span>
              </div>
              <span
                class="pf-c-select__toggle-arrow"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="input-group-btn"
        >
          <button
            aria-disabled="false"
            aria-label="t(form-dialog.label, {\\"context\\":\\"add-credential\\"})"
            class="pf-c-button pf-m-control"
            data-ouia-component-id="OUIA-Generated-Button-control-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            title="t(form-dialog.label, {\\"context\\":\\"add-credential\\"})"
            type="button"
          >
            <span
              class="pf-c-button__icon pf-m-start"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_connection)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="quipucords-select quipucords-select__not-inline"
      >
        <div
          class="pf-c-select quipucords-select-pf quipucords-select-pf__position-down  "
          data-ouia-component-id="OUIA-Generated-Select-single-2"
          data-ouia-component-type="PF4/Select"
          data-ouia-safe="true"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Options menu"
            aria-labelledby=" pf-select-toggle-id-8"
            class="pf-c-select__toggle"
            id="pf-select-toggle-id-8"
            type="button"
          >
            <div
              class="pf-c-select__toggle-wrapper"
            >
              <span
                class="pf-c-select__toggle-text"
              >
                t(form-dialog.label_option, {"context":"SSLv23"})
              </span>
            </div>
            <span
              class="pf-c-select__toggle-arrow"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-control"
    >
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          name="optionSslCert"
          type="checkbox"
        />
        t(form-dialog.label_verify-ssl-certificate)
      </label>
    </div>
  </div>
</form>
`;

exports[`AddSourceWizardStepTwo Component should export select options: options 1`] = `
Array [
  Object {
    "title": "t(form-dialog.label_option, {\\"context\\":\\"SSLv23\\"})",
    "value": "SSLv23",
  },
  Object {
    "title": "t(form-dialog.label_option, {\\"context\\":\\"TLSv1\\"})",
    "value": "TLSv1",
  },
  Object {
    "title": "t(form-dialog.label_option, {\\"context\\":\\"TLSv1_1\\"})",
    "value": "TLSv1_1",
  },
  Object {
    "title": "t(form-dialog.label_option, {\\"context\\":\\"TLSv1_2\\"})",
    "value": "TLSv1_2",
  },
  Object {
    "title": "t(form-dialog.label_option, {\\"context\\":\\"disableSsl\\"})",
    "value": "disableSsl",
  },
]
`;

exports[`AddSourceWizardStepTwo Component should render a non-connected component: non-connected 1`] = `
<form
  class="pf-c-form pf-m-horizontal"
  novalidate=""
>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_name)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-1"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="name"
        name="name"
        placeholder="Enter a name for the Network source"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_search-addresses)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea   pf-m-resize-vertical"
        id="hostsMultiple"
        name="hostsMultiple"
        placeholder="Enter values separated by commas"
        rows="5"
      />
      <span
        class="help-block"
      >
        IP addresses, IP ranges, DNS host names, and wildcards are valid. Use CIDR or Ansible notation for ranges.
      </span>
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_port)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="port"
        maxlength="5"
        name="port"
        placeholder="Default port is 22"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-label"
    >
      <label
        class="pf-c-form__label"
      >
        <span
          class="pf-c-form__label-text"
        >
          t(form-dialog.label_credential)
        </span>
      </label>
       
    </div>
    <div
      class="pf-c-form__group-control"
    >
      <span
        class="input-group"
      >
        <div
          class="quipucords-select quipucords-select__not-inline"
        >
          <div
            class="pf-c-select quipucords-select-pf quipucords-select-pf__position-down  "
            data-ouia-component-id="OUIA-Generated-Select-checkbox-1"
            data-ouia-component-type="PF4/Select"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-label="Options menu"
              aria-labelledby=" pf-select-toggle-id-1"
              class="pf-c-select__toggle pf-m-placeholder pf-m-disabled"
              disabled=""
              id="pf-select-toggle-id-1"
              type="button"
            >
              <div
                class="pf-c-select__toggle-wrapper"
              >
                <span
                  class="pf-c-select__toggle-text"
                >
                  t(form-dialog.label_placeholder_add-source_credential_multi, {"context":"add"})
                </span>
              </div>
              <span
                class="pf-c-select__toggle-arrow"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="input-group-btn"
        >
          <button
            aria-disabled="false"
            aria-label="t(form-dialog.label, {\\"context\\":\\"add-credential\\"})"
            class="pf-c-button pf-m-control"
            data-ouia-component-id="OUIA-Generated-Button-control-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            title="t(form-dialog.label, {\\"context\\":\\"add-credential\\"})"
            type="button"
          >
            <span
              class="pf-c-button__icon pf-m-start"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="pf-c-form__group"
    id="generatedid-"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-check quipucords-form__checkbox "
      >
        <input
          aria-invalid="false"
          aria-label="checkbox input"
          class="pf-c-check__input"
          data-ouia-component-id="OUIA-Generated-Checkbox-1"
          data-ouia-component-type="PF4/Checkbox"
          data-ouia-safe="true"
          id="optionParamiko"
          name="optionParamiko"
          type="checkbox"
          value=""
        />
        <label
          class="pf-c-check__label"
          for="optionParamiko"
        >
          Connect using Paramiko instead of Open 
          <abbr
            title="Secure Shell"
          >
            SSH
          </abbr>
        </label>
      </div>
    </div>
  </div>
</form>
`;
